--- a/Pokedex.UnitTests/Pokedex.UnitTests.csproj
+++ b/Pokedex.UnitTests/Pokedex.UnitTests.csproj
@@ -18,6 +18,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Moq" Version="4.17.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Moq" />
+    <None Remove="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Api\Pokedex.Api.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 </Project>
